--- a/style.css
+++ b/style.css
@@ -73,6 +73,13 @@
     width: 100%;
  }
 
+
+
+ /*!!!!!!!!! Home Page Style Start!!!!!!!!! */
+
+
+
+
  /* Header Style Start */
 
  #header{
@@ -569,6 +576,128 @@
  }
  /* Footer Style End */
 
+/*!!!!!!!!! Home Page Style End!!!!!!!!! */
+
+
+
+
+/*!!!!!!!!! Shope Page Style Start!!!!!!!!! */
+
+
+
+/* Page Header Section Style Start */
+
+#page-header{
+   background-image: url(img/banner/b1.jpg);
+   width: 100%;
+   height: 40vh;
+   background-size: cover;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   padding: 40px;
+}
+
+#page-header h2,
+#page-header p{
+   color: #fff;
+}
+
+/* Page Header Section Style End */
+
+/* Pagination Section Style Start */
+
+#pagination{
+   text-align: center;
+}
+
+#pagination a{
+   text-decoration: none;
+   background-color: #088178;
+   padding: 15px 20px;
+   border-radius: 4px;
+   color: #fff;
+   font-weight: 600;
+}
+
+#pagination a i{
+   font-size: 16px;
+   font-weight: 600;
+}
+/* Pagination Section Style End */
+
+
+/*!!!!!!!!! Shope Page Style End!!!!!!!!! */
+
+#proDetails{
+   display: flex;
+   margin-top: 20px;
+}
+
+#proDetails .single-pro-image{
+   width: 40%;
+   margin-right: 50px;
+}
+
+.small-img-group{
+   display: flex;
+   justify-content: space-between;
+}
+
+.small-img-col{
+   flex-basis: 24%;
+   cursor: pointer;
+}
+
+#proDetails .single-pro-details{
+   width: 50%;
+   padding-top: 30px;
+}
+
+#proDetails .single-pro-details h4{
+   padding: 40px 0 20px 0;
+}
+
+#proDetails .single-pro-details h2{
+   font-size: 26px;
+}
+
+#proDetails .single-pro-details select{
+   display: block;
+   padding: 5px 10px;
+   margin-bottom: 10px;
+}
+
+#proDetails .single-pro-details input{
+   width: 50px;
+   height: 47px;
+   padding: 10px;
+   font-size: 16px;
+   margin-right: 10px;
+}
+
+#proDetails .single-pro-details input:focus{
+   outline: none;
+}
+
+#proDetails .single-pro-details button{
+   background-color: #088178;
+   color: #fff;
+}
+
+#proDetails .single-pro-details span{
+   line-height: 25px;
+}
+
+
+ /*!!!!!!!!Product Details Style Start !!!!!!!! */
+
+
+
+ 
+ /*!!!!!!!roduct Details Style End !!!!!!!! */
+
  /* Media Query Start */
 
  /* For Medium Device */
@@ -736,6 +865,24 @@
    footer .copyright{
       text-align: start;
    }
+
+   /* Single product */
+
+   #proDetails{
+      display: flex;
+      flex-direction: column;
+   }
+
+   #proDetails .single-pro-image{
+      width: 100%;
+      margin-right: 0px;
+   }
+
+   #proDetails .single-pro-details{
+      width: 100%;
+   }
+
+
 }
 
 
