--- a/style.css
+++ b/style.css
@@ -772,6 +772,47 @@
 
   /*!!!!!!!!Blog page Style End !!!!!!!! */
 
+
+
+   /*!!!!!!!!About page Style Start !!!!!!!! */
+
+
+   #page-header.about-header{
+      background-image: url(img/about/banner.png);
+   }
+
+   #about-head{
+      display: flex;
+      align-items: center;
+   }
+
+   #about-head img{
+      width: 50%;
+      height: auto;
+   }
+
+   #about-head div{
+      padding-left: 40px;
+   }
+
+   #about-app{
+      text-align: center;
+   }
+
+   #about-app .video{
+      width: 70%;
+      height: 100%;
+      margin: 30px auto 0 auto;
+   }
+
+   #about-app .video video{
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+   }
+
+    /*!!!!!!!!About page Style End !!!!!!!! */
+
  /* Media Query Start */
 
  /* For Medium Device */
@@ -978,6 +1019,24 @@
       width: 100%;
    }
 
+   /* About Page */
+
+   #about-head{
+      flex-direction: column;
+   }
+
+   #about-head img{
+      width: 100%;
+      margin-bottom: 20px;
+   }
+
+   #about-head div{
+      padding-left: 0px;
+   }
+
+   #about-app .video{
+      width: 100%;
+   }
 
 }
 
